[gd_scene load_steps=3 format=3 uid="uid://c7xqn8vgm5kxr"]

[ext_resource type="Script" path="res://scripts/GameUI.gd" id="1_ui_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_ui_script")

[node name="Header" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Title" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
text = "Web Game Client"
theme_override_font_sizes/font_size = 24

[node name="MenuButtons" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
spacing = 10

[node name="FullscreenButton" type="Button" parent="Header/MenuButtons"]
layout_mode = 2
text = "Fullscreen"

[node name="SettingsButton" type="Button" parent="Header/MenuButtons"]
layout_mode = 2
text = "Settings"

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 110.0
text = "Score: 0"
theme_override_font_sizes/font_size = 20

[node name="HealthBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 140.0
value = 100.0

[node name="PauseMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
spacing = 20

[node name="PauseLabel" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "GAME PAUSED"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"
